RESOLVED FIXED 48992
REGRESSION (r71041): Crash in WebPageProxy::showContextMenu when right-clicking in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=48992
Summary REGRESSION (r71041): Crash in WebPageProxy::showContextMenu when right-clicki...
Adam Roben (:aroben)
Reported 2010-11-04 07:18:18 PDT
REGRESSION (r71041): Crash in WebPageProxy::showContextMenu when right-clicking in WebKit2 on Windows
Attachments
Patch (6.98 KB, patch)
2010-11-04 07:18 PDT, Adam Roben (:aroben)
mitz: review+
Adam Roben (:aroben)
Comment 1 2010-11-04 07:18:57 PDT
Adam Roben (:aroben)
Comment 2 2010-11-04 07:32:20 PDT
Note You need to log in before you can comment on or make changes to this bug.