Add a do-nothing WebContextMenuProxy implementation on Windows

Fixes <http://webkit.org/b/48992> REGRESSION (r71041): Crash in
WebPageProxy::showContextMenu when right-clicking in WebKit2 on
Windows

Reviewed by Dan Bernstein.

* UIProcess/win/WebContextMenuProxyWin.cpp: Added.
(WebKit::WebContextMenuProxyWin::WebContextMenuProxyWin):
(WebKit::WebContextMenuProxyWin::create):
(WebKit::WebContextMenuProxyWin::showContextMenu):
(WebKit::WebContextMenuProxyWin::hideContextMenu):
* UIProcess/win/WebContextMenuProxyWin.h: Added.
Just stubbed-out this class.

* UIProcess/win/WebView.cpp:
(WebKit::WebView::createContextMenuProxy): Create a new
WebContextMenuProxyWin and return it. Returning 0 results in a crash.

* win/WebKit2.vcproj: Added WebContextMenuProxyWin.

git-svn-id: svn://svn.chromium.org/blink/trunk@71333 bbb929c8-8fbe-4397-9dbb-9b2b20218538