third_party/WebKit/WebKit2/UIProcess/win/WebView.cpp
@@ -30,7 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FindIndicator.h"
 #include "RunLoop.h"
 #include "NativeWebKeyboardEvent.h"
-#include "WebContextMenuProxy.h"
+#include "WebContextMenuProxyWin.h"
 #include "WebEditCommandProxy.h"
 #include "WebEventFactory.h"
 #include "WebPageNamespace.h"
@@ -629,8 +629,7 @@ PassRefPtr<WebPopupMenuProxy> WebView::createPopupMenuProxy()
 
 PassRefPtr<WebContextMenuProxy> WebView::createContextMenuProxy(WebPageProxy*)
 {
-    // FIXME: Implement.
-    return 0;
+    return WebContextMenuProxyWin::create();
 }
 
 void WebView::setFindIndicator(PassRefPtr<FindIndicator>, bool fadeOut)
